# SensorThingsGost-Balena

./: .balena-sync.yml  .gitignore  Dockerfile  Dockerfile.template  README.md  run.sh  start.sh  test_sensor.c
app/: main.go  run.sh
app/DH11/: DH11  main.c
app/monitor/: monitor.c
images/: BBB.img
monitor/: CMakeLists.txt  bbb_dht_read.c  input.json  main.c  monitor.c  onething.json  start.sh
monitor/DHT11/: CMakeLists.txt
monitor/IO/: CMakeLists.txt  ST_interface.c  ST_interface.h
